--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
     "string-strip-html": "^13.2.1",
     "tailwindcss": "^3.3.1",
     "wrangler": "^2.14.0"
+  },
+  "dependencies": {
+    "@astrojs/react": "^2.1.1",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
