--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.5",
     "microcms-js-sdk": "^2.3.3",
+    "rome": "12.0.0",
     "string-strip-html": "^13.2.1",
     "tailwindcss": "^3.3.1",
     "wrangler": "^2.14.0"
