--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,25 @@
     "moduleResolution": "node",
     "module": "ES2022",
     "target": "es2022",
-    "types": ["vite/client"],
+    "types": [
+      "vite/client"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*.astro"],
-      "@layouts/*": ["src/components/layouts/*.astro"],
-      "@data/*": ["src/data/*.ts"],
-      "@lib/*": ["src/lib/*.ts"]
-    }
+      "@components/*": [
+        "src/components/*.astro"
+      ],
+      "@layouts/*": [
+        "src/components/layouts/*.astro"
+      ],
+      "@data/*": [
+        "src/data/*.ts"
+      ],
+      "@lib/*": [
+        "src/lib/*.ts"
+      ]
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
