--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "start": "astro dev"
   },
   "devDependencies": {
+    "rome": "12.0.0"
+  },
+  "dependencies": {
     "@astrojs/cloudflare": "^6.2.2",
-    "@astrojs/rss": "^2.3.2",
+    "@astrojs/react": "^2.1.1",
     "@astrojs/sitemap": "^1.2.2",
+    "@astrojs/tailwind": "^3.1.1",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
     "astro": "^2.2.1",
     "astro-robots-txt": "^0.4.1",
+    "astro-rome": "^0.1.11",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.5",
     "microcms-js-sdk": "^2.3.3",
-    "rome": "12.0.0",
-    "string-strip-html": "^13.2.1",
-    "tailwindcss": "^3.3.1",
-    "wrangler": "^2.14.0"
-  },
-  "dependencies": {
-    "@astrojs/react": "^2.1.1",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "string-strip-html": "^13.2.1",
+    "tailwindcss": "^3.3.1"
   }
 }
