replace Footer component to React

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
       "@layouts/*": [
         "src/components/layouts/*.astro"
       ],
-      "@constants/*": [
-        "src/constants/*.ts"
+      "@constants": [
+        "src/constants"
       ],
       "@lib/*": [
         "src/lib/*.ts"
