--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       ]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "skipLibCheck": true
   }
 }
